--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_vibrate: ^1.3.0
   cloud_firestore: ^4.10.0
   firebase_analytics: ^10.6.0
+  test: ^1.24.9
   
   cupertino_icons: ^1.0.2
   get: ^4.6.6
